# dna-risk-predict

./: .dockerignore  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: matrix.json  tests-static.yaml  tests.yaml
README_files/: config.yaml  docs.md
contact/: index.html
development/: 1.buildCatBoost.md  1.simulateData.md  testDNAttend.md
docs/: config.yaml  contact.md  evaluation.md  index.md  usage.md
evaluation/: index.html
search/: search_index.json
src/dnattend/: __init__.py  _utils.py  _version.py  cli.py  data.py  main.py  parseArgs.py  simulate.py  test.py  train.py  utils.py
tests/: dnattend_test.py
usage/: index.html
